<resources>
    <string name="app_name">Ispit Meal App</string>
    <string name="filter">Filter</string>
    <string name="plan">Plan</string>
    <string name="profile">Profile</string>
    <string name="meal_title">Meal title</string>
    <string name="meal_tags">Meal tags</string>
    <string name="yt_link">Youtube link</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="save_meal">Save</string>
    <string name="meal">Meal</string>
    <string name="category">Category</string>
    <string name="text">Text</string>
    <string name="create_weekly_plan">Create weekly plan</string>
    <string name="select_day">Select day</string>
    <string name="select_meal_type">Select meal type</string>
    <string name="select_category">Select category</string>
    <string name="who_is_this_meal_for">Who do we send this to</string>
    <string name="send_plan">Send plan</string>
    <string name="search">Search...</string>
    <string name="izaberi_datum_pripreme_opciono">Select date:</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="izaberi_kategoriju">Izaberi kategoriju:</string>
    <string name="add_to_menu">Add to menu</string>
    <string name="select_date">Select date</string>
    <string name="welcome">Welcome</string>
    <string name="hello_please_log_in">Hello, please log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Signup</string>
    <string name="save_changes">Save changes</string>
    <string name="delete">Delete</string>
    <string name="menu">Menu</string>
</resources>